- Final version 28.11.2024 - EOL

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,8 @@
 /static/
 /main/migrations/
 /main/.idea/
-!/main/static/js/docs_validator.js
+/myproject.sock
+/db.sqlite3
+/.env
+/schema.yml
+/main/media/
